stoat/src/snapshots/stoat__test_harness__command_palette_arg_empty.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: space
focused: #1 of 1
mode: insert
size: 120x30
---
[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m1[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                                                    [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                                                                        [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m[38;2;99;109;131m[48;2;40;44;52m┌ open ────────────────────────────────────────────────────────────────────────┐[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;229;192;123m[48;2;40;44;52m:[0m[38;2;250;250;250m[48;2;40;44;52m o [0m[7m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;250;250;250m[48;2;40;44;52m                                                                         [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m[38;2;99;109;131m[48;2;40;44;52m│──────────────────────────────────────────────────────────────────────────────│[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;40;44;52m[48;2;86;182;194m README.md                     [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[1m[38;2;110;213;222m[48;2;40;44;52m# project[0m[38;2;250;250;250m[48;2;40;44;52m                                     [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m src/lib.rs                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                              [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m src/main.rs                   [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                              [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                               [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                              [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                               [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                              [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                               [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                              [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                               [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                              [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                               [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                              [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                               [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                              [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                               [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                              [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                               [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                              [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                               [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                                              [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m
[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                               [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                      [0m[38;2;99;109;131m[48;2;40;44;52m┌ palette ──────────────────────────────────┐[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                               [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                      [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52mUp, C-p[0m[38;2;250;250;250m[48;2;40;44;52m   select previous palette entry   [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                               [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                      [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52mDn, C-n[0m[38;2;250;250;250m[48;2;40;44;52m   select next palette entry       [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                               [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                      [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m   A-Up[0m[38;2;250;250;250m[48;2;40;44;52m   recall older palette history    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                               [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m                      [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m   A-Dn[0m[38;2;250;250;250m[48;2;40;44;52m   recall newer palette history    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                    [0m[38;2;99;109;131m[48;2;40;44;52m└──────────────────────────────────────────────────────│─[0m[38;2;86;182;194m[48;2;40;44;52m    C-f[0m[38;2;250;250;250m[48;2;40;44;52m   page palette down               [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                           [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m    C-b[0m[38;2;250;250;250m[48;2;40;44;52m   page palette up                 [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                           [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m    Tab[0m[38;2;250;250;250m[48;2;40;44;52m   complete selected palette entry [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                           [0m[38;2;99;109;131m[48;2;40;44;52m│[0m[38;2;250;250;250m[48;2;40;44;52m [0m[38;2;86;182;194m[48;2;40;44;52m  S-Tab[0m[38;2;250;250;250m[48;2;40;44;52m   toggle command palette scope    [0m[38;2;99;109;131m[48;2;40;44;52m│[0m
[0m[38;2;250;250;250m[48;2;40;44;52m                                                                           [0m[38;2;99;109;131m[48;2;40;44;52m└───────────────────────────────────────────┘[0m
[0m[38;2;40;44;52m[48;2;152;195;121m INS [0m[38;2;250;250;250m[48;2;99;109;131m stoat-palette-test [scratch] [0m[38;2;99;109;131m[48;2;99;109;131m────────────────────────────────────────────────────────────────────────────────[0m[38;2;250;250;250m[48;2;99;109;131m 1:1 [0m
