stoat/src/snapshots/stoat__test_harness__command_palette_collect_args_empty.snap
---
source: stoat/src/test_harness.rs
expression: text
---
actions: enter
focused: #1 of 1
mode: prompt
size: 80x24
---
[0m[7m [0m







  [0m[35m┌ OpenFile ────────────────────────────────────────────────────────────────┐[0m
  [0m[35m│[0m[33mpath: [0m[7m [0m                                                                   [0m[35m│[0m
  [0m[35m│[0m[90m──────────────────────────────────────────────────────────────────────────[0m[35m│[0m
  [0m[35m│[0m[90mpath (string, required)[0m                                                   [0m[35m│[0m
  [0m[35m│[0m[37mFilesystem path of the file to open. Relative paths resolve against the[0m   [0m[35m│[0m
  [0m[35m│[0m[37mcurrent working directory.[0m                                                [0m[35m│[0m
  [0m[35m└──────────────────────────────────────────────────────────────────────────┘[0m



                                       [0m[33m┌ palette ──────────────────────────────┐[0m
                                       [0m[33m│[0m[36mUp, C-p[0m[97m   select previous palette entry[0m[33m│[0m
                                       [0m[33m│[0m[36mDn, C-n[0m[97m   select next palette entry[0m    [0m[33m│[0m
                                       [0m[33m│[0m[36m  S-Tab[0m[97m   toggle command palette scope[0m [0m[33m│[0m
                                       [0m[33m└───────────────────────────────────────┘[0m
[0m[1m[30m[42m PMT [0m[1m[97m[100m (unnamed) [0m[97m[100m[scratch]                                                   1:1 [0m
